updated formats from w3c

--- a/ontology/documentation/sections/crossref-en.html
+++ b/ontology/documentation/sections/crossref-en.html
@@ -1,5 +1,5 @@
-<h2 id="crossreference" class="list">Cross reference for RML Source and Target classes, object properties and data properties <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-This section provides details for each class and property defined by RML Source and Target.
+<h2 id="crossreference" class="list">Cross reference for RML-IO: Source and Target classes, object properties and data properties <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+This section provides details for each class and property defined by RML-IO: Source and Target.
 <div xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" id="classes">
    <h3 id="classes-headline" class="list">Classes</h3>
    <ul class="hlist">
@@ -8,9 +8,6 @@ This section provides details for each class and property defined by RML Source 
       </li>
       <li>
          <a href="#http://w3id.org/rml/Encoding" title="http://w3id.org/rml/Encoding">Encoding class</a>
-      </li>
-      <li>
-         <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
       </li>
       <li>
          <a href="#http://w3id.org/rml/LogicalSource" title="http://w3id.org/rml/LogicalSource">Logical Source</a>
@@ -92,39 +89,6 @@ This section provides details for each class and property defined by RML Source 
          <dd>
             <a href="#http://w3id.org/rml/UTF-16" title="http://w3id.org/rml/UTF-16">UTF-16</a>
             <sup class="type-ni" title="named individual">ni</sup>, <a href="#http://w3id.org/rml/UTF-8" title="http://w3id.org/rml/UTF-8">UTF-8</a>
-            <sup class="type-ni" title="named individual">ni</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://w3id.org/rml/Format">
-      <h3>Format<sup class="type-c" title="class">c</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/Format</p>
-      <div class="comment">
-         <span class="markdown">Represents serialization formats.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>is in range of</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/serialization" title="http://w3id.org/rml/serialization">serialization</a>
-            <sup class="type-op" title="object property">op</sup>
-         </dd>
-         <dt>has members</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/JSON-LD" title="http://w3id.org/rml/JSON-LD">JSON-LD</a>
-            <sup class="type-ni" title="named individual">ni</sup>, <a href="#http://w3id.org/rml/N-Quads" title="http://w3id.org/rml/N-Quads">N-Quads</a>
-            <sup class="type-ni" title="named individual">ni</sup>, <a href="#http://w3id.org/rml/N-Triples" title="http://w3id.org/rml/N-Triples">N-Triples</a>
-            <sup class="type-ni" title="named individual">ni</sup>, <a href="#http://w3id.org/rml/SPARQL_Results_CSV" title="http://w3id.org/rml/SPARQL_Results_CSV">SPARQL results CSV</a>
-            <sup class="type-ni" title="named individual">ni</sup>, <a href="#http://w3id.org/rml/Turtle" title="http://w3id.org/rml/Turtle">Turtle</a>
             <sup class="type-ni" title="named individual">ni</sup>
          </dd>
       </dl>
@@ -618,7 +582,9 @@ This section provides details for each class and property defined by RML Source 
             </dd>
             <dt>has range</dt>
             <dd>
-               <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
+               <a href="https://www.w3.org/ns/formats/Format"
+                  target="_blank"
+                  title="https://www.w3.org/ns/formats/Format">format</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
@@ -764,19 +730,7 @@ This section provides details for each class and property defined by RML Source 
          <a href="#http://w3id.org/rml/gzip" title="http://w3id.org/rml/gzip">GZip</a>
       </li>
       <li>
-         <a href="#http://w3id.org/rml/JSON-LD" title="http://w3id.org/rml/JSON-LD">JSON-LD</a>
-      </li>
-      <li>
          <a href="#http://w3id.org/rml/JSONPath" title="http://w3id.org/rml/JSONPath">JSONPath</a>
-      </li>
-      <li>
-         <a href="#http://w3id.org/rml/N-Quads" title="http://w3id.org/rml/N-Quads">N-Quads</a>
-      </li>
-      <li>
-         <a href="#http://w3id.org/rml/N-Triples" title="http://w3id.org/rml/N-Triples">N-Triples</a>
-      </li>
-      <li>
-         <a href="#http://w3id.org/rml/SPARQL_Results_CSV" title="http://w3id.org/rml/SPARQL_Results_CSV">SPARQL results CSV</a>
       </li>
       <li>
          <a href="#http://w3id.org/rml/SQL2008" title="http://w3id.org/rml/SQL2008">SQL 2008</a>
@@ -786,9 +740,6 @@ This section provides details for each class and property defined by RML Source 
       </li>
       <li>
          <a href="#http://w3id.org/rml/tarxz" title="http://w3id.org/rml/tarxz">TarXz</a>
-      </li>
-      <li>
-         <a href="#http://w3id.org/rml/Turtle" title="http://w3id.org/rml/Turtle">Turtle</a>
       </li>
       <li>
          <a href="#http://w3id.org/rml/UTF-16" title="http://w3id.org/rml/UTF-16">UTF-16</a>
@@ -851,30 +802,6 @@ This section provides details for each class and property defined by RML Source 
          </dd>
       </dl>
    </div>
-   <div class="entity" id="http://w3id.org/rml/JSON-LD">
-      <h3>JSON-LD<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/JSON-LD</p>
-      <div class="comment">
-         <span class="markdown">Represents the JSON-LD serialization.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
-            <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
    <div class="entity" id="http://w3id.org/rml/JSONPath">
       <h3>JSONPath<sup class="type-ni" title="named individual">ni</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
@@ -895,78 +822,6 @@ This section provides details for each class and property defined by RML Source 
          <dt>belongs to</dt>
          <dd>
             <a href="#http://w3id.org/rml/ReferenceFormulation" title="http://w3id.org/rml/ReferenceFormulation">Reference Formulation</a>
-            <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://w3id.org/rml/N-Quads">
-      <h3>N-Quads<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/N-Quads</p>
-      <div class="comment">
-         <span class="markdown">Represents the N-Quads serialization.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
-            <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://w3id.org/rml/N-Triples">
-      <h3>N-Triples<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/N-Triples</p>
-      <div class="comment">
-         <span class="markdown">Represents the N-Triples serialization.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
-            <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://w3id.org/rml/SPARQL_Results_CSV">
-      <h3>SPARQL results CSV<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/SPARQL_Results_CSV</p>
-      <div class="comment">
-         <span class="markdown">Represents the SPARQL results CSV serialization.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
             <sup class="type-c" title="class">c</sup>
          </dd>
       </dl>
@@ -1039,30 +894,6 @@ This section provides details for each class and property defined by RML Source 
          <dt>belongs to</dt>
          <dd>
             <a href="#http://w3id.org/rml/Compression" title="http://w3id.org/rml/Compression">compression class</a>
-            <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://w3id.org/rml/Turtle">
-      <h3>Turtle<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://w3id.org/rml/Turtle</p>
-      <div class="comment">
-         <span class="markdown">Represents the Turtle serialization.</span>
-      </div>
-      <dl class="definedBy">
-         <dt>Is defined by</dt>
-         <dd>
-            <a href="http://w3id.org/rml/io/">http://w3id.org/rml/io/</a>
-         </dd>
-      </dl>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
             <sup class="type-c" title="class">c</sup>
          </dd>
       </dl>
