--- a/ontology/documentation/sections/overview-en.html
+++ b/ontology/documentation/sections/overview-en.html
@@ -1,4 +1,4 @@
-<h2 id="overv" class="list">RML Source and Target: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">RML-IO: Source and Target: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
@@ -8,9 +8,6 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#http://w3id.org/rml/Encoding" title="http://w3id.org/rml/Encoding">Encoding class</a>
-   </li>
-   <li>
-      <a href="#http://w3id.org/rml/Format" title="http://w3id.org/rml/Format">Format</a>
    </li>
    <li>
       <a href="#http://w3id.org/rml/LogicalSource" title="http://w3id.org/rml/LogicalSource">Logical Source</a>
@@ -79,19 +76,7 @@ This ontology has the following classes and properties.</span>
       <a href="#http://w3id.org/rml/gzip" title="http://w3id.org/rml/gzip">GZip</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/JSON-LD" title="http://w3id.org/rml/JSON-LD">JSON-LD</a>
-   </li>
-   <li>
       <a href="#http://w3id.org/rml/JSONPath" title="http://w3id.org/rml/JSONPath">JSONPath</a>
-   </li>
-   <li>
-      <a href="#http://w3id.org/rml/N-Quads" title="http://w3id.org/rml/N-Quads">N-Quads</a>
-   </li>
-   <li>
-      <a href="#http://w3id.org/rml/N-Triples" title="http://w3id.org/rml/N-Triples">N-Triples</a>
-   </li>
-   <li>
-      <a href="#http://w3id.org/rml/SPARQL_Results_CSV" title="http://w3id.org/rml/SPARQL_Results_CSV">SPARQL results CSV</a>
    </li>
    <li>
       <a href="#http://w3id.org/rml/SQL2008" title="http://w3id.org/rml/SQL2008">SQL 2008</a>
@@ -101,9 +86,6 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#http://w3id.org/rml/tarxz" title="http://w3id.org/rml/tarxz">TarXz</a>
-   </li>
-   <li>
-      <a href="#http://w3id.org/rml/Turtle" title="http://w3id.org/rml/Turtle">Turtle</a>
    </li>
    <li>
       <a href="#http://w3id.org/rml/UTF-16" title="http://w3id.org/rml/UTF-16">UTF-16</a>
