--- a/ontology/documentation/index-en.html
+++ b/ontology/documentation/index-en.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>RML Source and Target</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>RML-IO: Source and Target</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"http://w3id.org/rml/io/","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/rml/io/","name":"RML Source and Target", "headline":"RML-IO enables the description of in put data sources and target output data serialization", "datePublished":"Fri Apr 28 11:56:00 UTC 2023", "contributor":[{"@type":"Person","name":"Ana Iglesias Molina"},{"@type":"Person","name":"Anastasia Dimou"},{"@type":"Person","name":"Dylan Van Assche"},{"@type":"Person","name":"Pano Maria"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"http://w3id.org/rml/io/","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/rml/io/","name":"RML-IO: Source and Target", "headline":"RML-IO enables the description of input data sources and target output data serialization", "datePublished":"Fri Apr 28 14:43:47 UTC 2023", "contributor":[{"@type":"Person","name":"Ana Iglesias Molina"},{"@type":"Person","name":"Anastasia Dimou"},{"@type":"Person","name":"Dylan Van Assche"},{"@type":"Person","name":"Pano Maria"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,7 +59,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>RML Source and Target</h1>
+<h1>RML-IO: Source and Target</h1>
 
 
 <dl>
@@ -68,7 +68,7 @@ function loadTOC(){
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.rdf" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License:</dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-license%20name%20goes%20here-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
 </dd><!-- <dt>Evaluation:</dt><dd><a href="OOPSEvaluation/oopsEval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
-<dd> RML Source and Target.</dd>
+<dd> RML-IO: Source and Target.</dd>
 </dl>
 
 <a href="provenance/provenance-en.html" target="_blank">Provenance of this page</a><hr/>
