--- a/ontology/documentation/provenance/provenance-en.html
+++ b/ontology/documentation/provenance/provenance-en.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="head">
-<h1>Provenance for RML Source and Target Documentation (out)</h1>
+<h1>Provenance for RML-IO: Source and Target Documentation (out)</h1>
 <ul>
 	<li>Ontology contributed to by: Ana Iglesias Molina, Anastasia Dimou, Dylan Van Assche, Pano Maria</li>
 <li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
