--- a/ontology/documentation/sections/introduction-en.html
+++ b/ontology/documentation/sections/introduction-en.html
@@ -11,7 +11,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td></td><td></td></tr>
 <tr><td><b>cc</b></td><td>&lt;http://creativecommons.org/ns&gt;</td></tr>
 <tr><td><b>comp</b></td><td>&lt;http://w3id.org/rml/comp&gt;</td></tr>
-<tr><td><b>formats</b></td><td>&lt;http://w3id.org/rml/formats&gt;</td></tr>
+<tr><td><b>formats</b></td><td>&lt;https://www.w3.org/ns/formats&gt;</td></tr>
 <tr><td><b>vaem</b></td><td>&lt;http://www.linkedmodel.org/schema/vaem&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
