--- a/ontology/documentation/sections/abstract-en.html
+++ b/ontology/documentation/sections/abstract-en.html
@@ -1,2 +1,4 @@
 <h2>Abstract</h2><span class="markdown">
-RML-IO enables the description of input data sources and target output data serialization </span>
+  This document defines the RML-IO module belonging to the [RML ontology network](https://w3id.org/rml/portal).
+  A detailed description of the use of this module can be found in the [RML-IO specification](https://w3id.org/rml/io/spec).
+</span>
