--- a/spec/dev.html
+++ b/spec/dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Source &amp; Target</title>
+    <title>RML-IO</title>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="./resources/css/extras.css"/>
     <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
@@ -303,12 +303,7 @@
 <body>
 <section id='abstract' data-include="section/abstract.md" data-include-format="markdown"></section>
 
-<section id='sotd'>
-    <p data-format="markdown">
-        This is an early draft,
-        yet efforts are made to keep things stable.
-    </p>
-</section>
+<section id='sotd'></section>
 
 <section id="conformance"></section>
 
