--- a/ontology/documentation/sections/overview-en.html
+++ b/ontology/documentation/sections/overview-en.html
@@ -4,99 +4,102 @@ This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#http://w3id.org/rml/Compression" title="http://w3id.org/rml/Compression">compression class</a>
+      <a href="#Compression" title="http://w3id.org/rml/Compression">compression class</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/Encoding" title="http://w3id.org/rml/Encoding">Encoding class</a>
+      <a href="#Encoding" title="http://w3id.org/rml/Encoding">Encoding class</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/LogicalSource" title="http://w3id.org/rml/LogicalSource">Logical Source</a>
+      <a href="#LogicalSource" title="http://w3id.org/rml/LogicalSource">Logical Source</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/LogicalTarget" title="http://w3id.org/rml/LogicalTarget">LogicalTarget</a>
+      <a href="#LogicalTarget" title="http://w3id.org/rml/LogicalTarget">LogicalTarget</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/Namespace" title="http://w3id.org/rml/Namespace">Namespace</a>
+      <a href="#Namespace" title="http://w3id.org/rml/Namespace">Namespace</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/ReferenceFormulation" title="http://w3id.org/rml/ReferenceFormulation">Reference Formulation</a>
+      <a href="#ReferenceFormulation" title="http://w3id.org/rml/ReferenceFormulation">Reference Formulation</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/Source" title="http://w3id.org/rml/Source">Source</a>
+      <a href="#Source" title="http://w3id.org/rml/Source">Source</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/Target" title="http://w3id.org/rml/Target">Target</a>
+      <a href="#Target" title="http://w3id.org/rml/Target">Target</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/XPathReferenceFormulation" title="http://w3id.org/rml/XPathReferenceFormulation">XPath Reference Formulation</a>
+      <a href="#XPathReferenceFormulation" title="http://w3id.org/rml/XPathReferenceFormulation">XPath Reference Formulation</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#http://w3id.org/rml/compression" title="http://w3id.org/rml/compression">compression</a>
+      <a href="#compression" title="http://w3id.org/rml/compression">compression</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/encoding" title="http://w3id.org/rml/encoding">encoding</a>
+      <a href="#encoding" title="http://w3id.org/rml/encoding">encoding</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/iterator" title="http://w3id.org/rml/iterator">iterator</a>
+      <a href="#iterator" title="http://w3id.org/rml/iterator">iterator</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/namespace" title="http://w3id.org/rml/namespace">namespace</a>
+      <a href="#namespace" title="http://w3id.org/rml/namespace">namespace</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/null" title="http://w3id.org/rml/null">null</a>
+      <a href="#null" title="http://w3id.org/rml/null">null</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/query" title="http://w3id.org/rml/query">query</a>
+      <a href="#query" title="http://w3id.org/rml/query">query</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
+      <a href="#referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/serialization" title="http://w3id.org/rml/serialization">serialization</a>
+      <a href="#serialization" title="http://w3id.org/rml/serialization">serialization</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/source" title="http://w3id.org/rml/source">source</a>
+      <a href="#source" title="http://w3id.org/rml/source">source</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/target" title="http://w3id.org/rml/target">target</a>
+      <a href="#target" title="http://w3id.org/rml/target">target</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#http://w3id.org/rml/namespacePrefix" title="http://w3id.org/rml/namespacePrefix">namespace prefix</a>
+      <a href="#namespacePrefix" title="http://w3id.org/rml/namespacePrefix">namespace prefix</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/namespaceURL" title="http://w3id.org/rml/namespaceURL">namespace URL</a>
+      <a href="#namespaceURL" title="http://w3id.org/rml/namespaceURL">namespace URL</a>
    </li>
 </ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#http://w3id.org/rml/CSV" title="http://w3id.org/rml/CSV">CSV</a>
+      <a href="#CSV" title="http://w3id.org/rml/CSV">CSV</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/gzip" title="http://w3id.org/rml/gzip">GZip</a>
+      <a href="#gzip" title="http://w3id.org/rml/gzip">GZip</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/JSONPath" title="http://w3id.org/rml/JSONPath">JSONPath</a>
+      <a href="#JSONPath" title="http://w3id.org/rml/JSONPath">JSONPath</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/SQL2008" title="http://w3id.org/rml/SQL2008">SQL 2008</a>
+      <a href="#none" title="http://w3id.org/rml/none">None</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/targzip" title="http://w3id.org/rml/targzip">TarGZip</a>
+      <a href="#SQL2008" title="http://w3id.org/rml/SQL2008">SQL 2008</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/tarxz" title="http://w3id.org/rml/tarxz">TarXz</a>
+      <a href="#targzip" title="http://w3id.org/rml/targzip">TarGZip</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/UTF-16" title="http://w3id.org/rml/UTF-16">UTF-16</a>
+      <a href="#tarxz" title="http://w3id.org/rml/tarxz">TarXz</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/UTF-8" title="http://w3id.org/rml/UTF-8">UTF-8</a>
+      <a href="#UTF-16" title="http://w3id.org/rml/UTF-16">UTF-16</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/XPath" title="http://w3id.org/rml/XPath">XPath</a>
+      <a href="#UTF-8" title="http://w3id.org/rml/UTF-8">UTF-8</a>
    </li>
    <li>
-      <a href="#http://w3id.org/rml/zip" title="http://w3id.org/rml/zip">Zip</a>
+      <a href="#XPath" title="http://w3id.org/rml/XPath">XPath</a>
+   </li>
+   <li>
+      <a href="#zip" title="http://w3id.org/rml/zip">Zip</a>
    </li>
 </ul>
