--- a/spec/dev.html
+++ b/spec/dev.html
@@ -225,14 +225,14 @@
         // formal title, define it here
         // subtitle   :  "White Paper",
         // if you wish the publication date to be other than the last modification, set this
-        // publishDate:  "2015-06-30",
+        publishDate:  "2023-09-18",
         // if the specification's copyright date is a range of years, specify
         // the start date here:
         copyrightStart: "2021",
         // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
         // and its maturity status
-        // previousPublishDate: "2015-10-15",
-        // previousMaturity: "FPWD",
+        //previousPublishDate: "2023-05-09",
+        //previousMaturity: "FPWD",
         // if there a publicly available Editor's Draft, this is the link
         edDraftURI: "https://w3id.org/rml/io/spec",
         // if this is a LCWD, uncomment and set the end of its review period
