--- a/ontology/documentation/sections/overview-en.html
+++ b/ontology/documentation/sections/overview-en.html
@@ -47,9 +47,6 @@ This ontology has the following classes and properties.</span>
       <a href="#null" title="http://w3id.org/rml/null">null</a>
    </li>
    <li>
-      <a href="#query" title="http://w3id.org/rml/query">query</a>
-   </li>
-   <li>
       <a href="#referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
    </li>
    <li>
@@ -82,7 +79,10 @@ This ontology has the following classes and properties.</span>
       <a href="#none" title="http://w3id.org/rml/none">None</a>
    </li>
    <li>
-      <a href="#SQL2008" title="http://w3id.org/rml/SQL2008">SQL 2008</a>
+      <a href="#SQL2008Query" title="http://w3id.org/rml/SQL2008Query">SQL 2008 Query</a>
+   </li>
+   <li>
+      <a href="#SQL2008Table" title="http://w3id.org/rml/SQL2008Table">SQL 2008 Table</a>
    </li>
    <li>
       <a href="#targzip" title="http://w3id.org/rml/targzip">TarGZip</a>
