--- a/ontology/documentation/sections/crossref-en.html
+++ b/ontology/documentation/sections/crossref-en.html
@@ -829,7 +829,7 @@ This section provides details for each class and property defined by RML-IO: Sou
       <p>
          <strong>IRI:</strong> http://w3id.org/rml/SQL2008Query</p>
       <div class="comment">
-         <span class="markdown">Denotes a query in SQL 2008.</span>
+         <span class="markdown">Denotes a reference formulation that affords the creation of a row based iteration using a query in accordance with SQL:2008, from which values can be referenced by column name.</span>
       </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
@@ -853,7 +853,7 @@ This section provides details for each class and property defined by RML-IO: Sou
       <p>
          <strong>IRI:</strong> http://w3id.org/rml/SQL2008Table</p>
       <div class="comment">
-         <span class="markdown">Denotes a table in SQL 2008.</span>
+         <span class="markdown">Denotes a reference formulation that affords the creation of a row based iteration using a table name reference in accordance with SQL:2008, from which values can be referenced by column name.</span>
       </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
