Fixed formats namespace in test cases and documentation

--- a/ontology/documentation/sections/crossref-en.html
+++ b/ontology/documentation/sections/crossref-en.html
@@ -547,9 +547,9 @@ This section provides details for each class and property defined by RML-IO: Sou
             </dd>
             <dt>has range</dt>
             <dd>
-               <a href="https://www.w3.org/ns/formats/Format"
+               <a href="http://www.w3.org/ns/formats/Format"
                   target="_blank"
-                  title="https://www.w3.org/ns/formats/Format">format</a>
+                  title="http://www.w3.org/ns/formats/Format">format</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
          </dl>
