ontology, diagram and documentation updated with relative paths and minor fixes

--- a/ontology/documentation/sections/overview-en.html
+++ b/ontology/documentation/sections/overview-en.html
@@ -7,6 +7,9 @@ This ontology has the following classes and properties.</span>
       <a href="#Compression" title="http://w3id.org/rml/Compression">compression class</a>
    </li>
    <li>
+      <a href="#CurrentWorkingDirectory" title="http://w3id.org/rml/CurrentWorkingDirectory">Current Working Directory</a>
+   </li>
+   <li>
       <a href="#Encoding" title="http://w3id.org/rml/Encoding">Encoding class</a>
    </li>
    <li>
@@ -16,10 +19,16 @@ This ontology has the following classes and properties.</span>
       <a href="#LogicalTarget" title="http://w3id.org/rml/LogicalTarget">LogicalTarget</a>
    </li>
    <li>
+      <a href="#MappingDirectory" title="http://w3id.org/rml/MappingDirectory">Mapping Directory</a>
+   </li>
+   <li>
       <a href="#Namespace" title="http://w3id.org/rml/Namespace">Namespace</a>
    </li>
    <li>
       <a href="#ReferenceFormulation" title="http://w3id.org/rml/ReferenceFormulation">Reference Formulation</a>
+   </li>
+   <li>
+      <a href="#RelativePath" title="http://w3id.org/rml/RelativePath">Relative Path</a>
    </li>
    <li>
       <a href="#Source" title="http://w3id.org/rml/Source">Source</a>
@@ -38,16 +47,13 @@ This ontology has the following classes and properties.</span>
       <a href="#encoding" title="http://w3id.org/rml/encoding">encoding</a>
    </li>
    <li>
-      <a href="#iterator" title="http://w3id.org/rml/iterator">iterator</a>
-   </li>
-   <li>
       <a href="#namespace" title="http://w3id.org/rml/namespace">namespace</a>
    </li>
    <li>
-      <a href="#null" title="http://w3id.org/rml/null">null</a>
+      <a href="#referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
    </li>
    <li>
-      <a href="#referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
+      <a href="#root" title="http://w3id.org/rml/root">root</a>
    </li>
    <li>
       <a href="#serialization" title="http://w3id.org/rml/serialization">serialization</a>
@@ -60,10 +66,19 @@ This ontology has the following classes and properties.</span>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
+      <a href="#iterator" title="http://w3id.org/rml/iterator">iterator</a>
+   </li>
+   <li>
       <a href="#namespacePrefix" title="http://w3id.org/rml/namespacePrefix">namespace prefix</a>
    </li>
    <li>
       <a href="#namespaceURL" title="http://w3id.org/rml/namespaceURL">namespace URL</a>
+   </li>
+   <li>
+      <a href="#null" title="http://w3id.org/rml/null">null</a>
+   </li>
+   <li>
+      <a href="#path" title="http://w3id.org/rml/path">path</a>
    </li>
 </ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
