replace logical source with input logical source (#93)

--- a/spec/dev.html
+++ b/spec/dev.html
@@ -211,6 +211,13 @@
               "Jeni Tennison"
             ],
             date: "25 February 2016",
+          },
+          "RML-Core": {
+            title: "RML-Core",
+            href: "https://w3id.org/rml/core/spec",
+            status: "Draft Community Group Report",
+            publisher: "W3C",
+            date: "07 August 2024",
           }
         },
         // These may become useful if the document gets a more 'official' status
@@ -315,7 +322,7 @@
 <section data-include="section/target-vocabulary.md" data-include-format="markdown"></section>
 
 <!-- Alignment RML -->
-<section data-include="section/logical-source-in-rml.md" data-include-format="markdown"></section>
+<section data-include="section/input-logical-source-in-rml.md" data-include-format="markdown"></section>
 
 <section data-include="section/logical-target-in-rml.md" data-include-format="markdown"></section>
 
