spec: dev: reflect correctly editors

--- a/spec/dev.html
+++ b/spec/dev.html
@@ -251,15 +251,17 @@
             name: "Dylan Van Assche",
             mailto: "dylan.vanassche@ugent.be",
             company: "IDLab &ndash; Ghent University &ndash; imec",
-            orcidid: "0000-0002-7195-9935",
-            companyURL: "http://idlab.technology/"
-          },
+            orcid: "0000-0002-7195-9935",
+            companyURL: "https://knows.idlab.ugent.be/"
+          }
+        ],
+        formerEditors: [
           {
             name: "Anastasia Dimou",
-            mailto: "anastasia.dimou@kuleuven.be",
-            company: "KU Leuven, Department of Computer Science",
-            orcidid: "0000-0003-2138-7972",
-            companyURL: "https://wms.cs.kuleuven.be/cs/english/"
+            url: "https://natadimou.com/#me",
+            orcid: "0000-0003-2138-7972",
+            company: "KU Leuven",
+            companyURL: "https://dtai.cs.kuleuven.be/"
           }
         ],
         group: "kg-construct",
