--- a/ontology/documentation/sections/overview-en.html
+++ b/ontology/documentation/sections/overview-en.html
@@ -2,7 +2,9 @@
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
-<ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
+<ul xmlns:widoco="https://w3id.org/widoco/vocab#"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    class="hlist">
    <li>
       <a href="#Compression" title="http://w3id.org/rml/Compression">compression class</a>
    </li>
@@ -39,7 +41,9 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#XPathReferenceFormulation" title="http://w3id.org/rml/XPathReferenceFormulation">XPath Reference Formulation</a>
    </li>
-</ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
+</ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    class="hlist">
    <li>
       <a href="#compression" title="http://w3id.org/rml/compression">compression</a>
    </li>
@@ -47,10 +51,10 @@ This ontology has the following classes and properties.</span>
       <a href="#encoding" title="http://w3id.org/rml/encoding">encoding</a>
    </li>
    <li>
-      <a href="#namespace" title="http://w3id.org/rml/namespace">namespace</a>
+      <a href="#logicalTarget" title="http://w3id.org/rml/logicalTarget">logical target</a>
    </li>
    <li>
-      <a href="#referenceFormulation" title="http://w3id.org/rml/referenceFormulation">reference formulation</a>
+      <a href="#namespace" title="http://w3id.org/rml/namespace">namespace</a>
    </li>
    <li>
       <a href="#root" title="http://w3id.org/rml/root">root</a>
@@ -64,10 +68,9 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#target" title="http://w3id.org/rml/target">target</a>
    </li>
-</ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
-   <li>
-      <a href="#iterator" title="http://w3id.org/rml/iterator">iterator</a>
-   </li>
+</ul><h4>Data Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    class="hlist">
    <li>
       <a href="#namespacePrefix" title="http://w3id.org/rml/namespacePrefix">namespace prefix</a>
    </li>
@@ -80,7 +83,9 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#path" title="http://w3id.org/rml/path">path</a>
    </li>
-</ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
+</ul><h4>Named Individuals</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    class="hlist">
    <li>
       <a href="#CSV" title="http://w3id.org/rml/CSV">CSV</a>
    </li>
