spec: dev: add URL

--- a/spec/dev.html
+++ b/spec/dev.html
@@ -250,6 +250,7 @@
           {
             name: "Dylan Van Assche",
             mailto: "dylan.vanassche@ugent.be",
+	    url: "https://dylanvanassche.be",
             company: "IDLab &ndash; Ghent University &ndash; imec",
             orcid: "0000-0002-7195-9935",
             companyURL: "https://knows.idlab.ugent.be/"
