test-cases: fix HTML

--- a/test-cases/dev.html
+++ b/test-cases/dev.html
@@ -109,14 +109,12 @@
 <section id="RMLSTC0005b" data-include="RMLSTC0005b/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0006a" data-include="RMLSTC0006a/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0006b" data-include="RMLSTC0006b/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0006c" data-include="RMLSTC0006c/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0006d" data-include="RMLSTC0006d/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0006e" data-include="RMLSTC0006e/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0006f" data-include="RMLSTC0006f/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0007a" data-include="RMLSTC0007a/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0007b" data-include="RMLSTC0007b/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0007c" data-include="RMLSTC0007c/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0007d" data-include="RMLSTC0007d/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0008a" data-include="RMLSTC0008a/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0008b" data-include="RMLSTC0008b/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0000" data-include="RMLTTC0000/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0001a" data-include="RMLTTC0001a/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0001b" data-include="RMLTTC0001b/README.md" data-include-format=markdown></section>
@@ -158,10 +156,6 @@
 <section id="RMLTTC0006d" data-include="RMLTTC0006d/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0006e" data-include="RMLTTC0006e/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0007a" data-include="RMLTTC0007a/README.md" data-include-format=markdown></section>
-<section id="RMLTTC0007b" data-include="RMLTTC0007b/README.md" data-include-format=markdown></section>
-<section id="RMLTTC0007c" data-include="RMLTTC0007c/README.md" data-include-format=markdown></section>
-<section id="RMLTTC0007d" data-include="RMLTTC0007d/README.md" data-include-format=markdown></section>
-<section id="RMLTTC0007e" data-include="RMLTTC0007e/README.md" data-include-format=markdown></section>
 
 </body>
 
