--- a/test-cases/dev.html
+++ b/test-cases/dev.html
@@ -105,8 +105,6 @@
 <section id="RMLSTC0004a" data-include="RMLSTC0004a/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0004b" data-include="RMLSTC0004b/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0004c" data-include="RMLSTC0004c/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0005a" data-include="RMLSTC0005a/README.md" data-include-format=markdown></section>
-<section id="RMLSTC0005b" data-include="RMLSTC0005b/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0006a" data-include="RMLSTC0006a/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0006b" data-include="RMLSTC0006b/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0007a" data-include="RMLSTC0007a/README.md" data-include-format=markdown></section>
@@ -115,6 +113,19 @@
 <section id="RMLSTC0007d" data-include="RMLSTC0007d/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0008a" data-include="RMLSTC0008a/README.md" data-include-format=markdown></section>
 <section id="RMLSTC0008b" data-include="RMLSTC0008b/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0009a" data-include="RMLSTC0009a/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0010a" data-include="RMLSTC0010a/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0010b" data-include="RMLSTC0010b/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0011a" data-include="RMLSTC0011a/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0011b" data-include="RMLSTC0011b/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0011c" data-include="RMLSTC0011c/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0011d" data-include="RMLSTC0011d/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0011e" data-include="RMLSTC0011e/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0012a" data-include="RMLSTC0012a/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0012b" data-include="RMLSTC0012b/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0012c" data-include="RMLSTC0012c/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0012d" data-include="RMLSTC0012d/README.md" data-include-format=markdown></section>
+<section id="RMLSTC0012e" data-include="RMLSTC0012e/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0000" data-include="RMLTTC0000/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0001a" data-include="RMLTTC0001a/README.md" data-include-format=markdown></section>
 <section id="RMLTTC0001b" data-include="RMLTTC0001b/README.md" data-include-format=markdown></section>
